--- a/css/Themes/hackermanTheme.css
+++ b/css/Themes/hackermanTheme.css
@@ -22,15 +22,16 @@
   color: #09ff00;
 }
 
-@font-face {
+/* @font-face {
   font-family: "Major";
   src: url(../../fonts/SlimDownRound.ttf);
-}
+} */
+
 .splashScreenText {
-  text-transform: uppercase;
   word-spacing: 1rem;
   line-height: 3rem !important;
   font-size: 2rem !important;
-  font-weight: lighter;
-  font-family: "Major", sans-serif !important;
+  font-weight: 500;
+  font-family: "Courier New", monospace !important;
+  /* font-family: "Major", sans-serif !important; */
 }
