--- a/css/Themes/patriot.css
+++ b/css/Themes/patriot.css
@@ -22,3 +22,11 @@
 .MJX-TEX {
   color: #000 !important;
 }
+.splashScreenText {
+  word-spacing: 1rem;
+  line-height: 3rem !important;
+  font-size: 2.5rem !important;
+  font-weight: bold !important;
+  font-family: cursive !important;
+  /* font-family: "Major", sans-serif !important; */
+}
