--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ html {
 body {
   min-height: 100vh !important;
   background-color: var(--white);
+  display: flex; /* Use flexbox */
+  flex-direction: column; /* Stack children vertically */
 }
 
 ::selection {
@@ -16,8 +18,7 @@ body {
   color: var(--white);
 }
 #container {
-  min-height: 100%;
-  padding-bottom: 100px;
+  flex: 1; /* Grow to fill remaining space */
 }
 /*Miscellaneous*/
 hr {
@@ -146,27 +147,29 @@ li {
 a:hover {
   color: var(--bg);
 }
-/*idk remove*/
-#footer {
-  width: 100%;
-  background-color: var(--black);
-  height: 12.5rem;
-  clear: both;
-}
+/*Footer CSS*/
 
 footer {
   z-index: -1000;
   position: relative;
-  bottom: 0;
+}
+
+/*Footer CSS*/
+#footer {
+  width: 100%;
+  background-color: var(--black);
+  display: flex; /* Use flexbox */
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  height: 12.5rem; /* Set a fixed height */
 }
 
 .footerTextColor {
   color: var(--white);
-  text-align: center;
-  padding: 15px;
   font-family: "Roboto Mono", monospace;
   font-size: 1.3rem;
-  line-height: 1.5rem;
+  line-height: 1.3rem;
+  text-align: center;
 }
 
 .changeLogText {
