--- a/css/chapterStyle.css
+++ b/css/chapterStyle.css
@@ -1,6 +1,5 @@
 /*main styling*/
 .main-wrapper {
-  max-width: 20cm;
   margin: 0 10px;
   padding: 10px;
 }
@@ -42,13 +41,13 @@ strong {
 
 th {
   background-color: var(--th-bgColor);
-  padding: 5px;
+  padding: 0.3rem;
   font-size: 18px;
   line-height: 22px;
   color: var(--black);
 }
 td {
-  padding: 5px;
+  padding: 0.3rem;
   color: var(--black);
 }
 tr:nth-child(odd) > td {
@@ -61,8 +60,9 @@ td {
   border-right: none;
 }
 .xScrollable {
+  max-width: 100vw;
   overflow-x: scroll;
-  width: 100vw;
+  position: relative;
 }
 .tableLines > tr,
 td {
@@ -139,6 +139,7 @@ button {
 /*img styling*/
 .zeichnungen {
   width: 70%;
+  max-width: 20rem;
 }
 /*Optimisatioun fir Printfunktioun*/
 @media print {
@@ -225,13 +226,20 @@ button {
   }
 }
 /*feedback nav tag*/
+@media only screen and (min-width: 250px) {
+  .main-wrapper {
+    margin-left: 1.5rem;
+    padding-left: 1rem;
+  }
+}
 /*Optimisatioun fir mini handy*/
 @media only screen and (max-width: 400px) {
   .phone {
     display: inherit;
   }
   .main-wrapper {
-    padding-left: 20px;
+    padding-left: 1rem;
+    margin-left: 1.5rem;
   }
 }
 /*Optimisatioun fir Handy*/
@@ -243,22 +251,21 @@ button {
     padding-left: 25px;
   }
 }
-/*Optimisatioun fir iPad mini/Air*/
-@media only screen and (min-width: 765px) {
-  .main-wrapper {
-    margin: 5px 50px;
-    margin-left: 2rem;
-  }
-}
 /*Optimisatioun fir iPad*/
 @media only screen and (min-width: 910px) {
   .main-wrapper {
     margin: 5px 50px;
     margin-left: 50px;
   }
-
   .iPad {
     display: inherit;
+  }
+}
+/*Optimisatioun fir iPad mini/Air*/
+@media only screen and (min-width: 765px) {
+  .main-wrapper {
+    margin: 5px 50px;
+    margin-left: 30px;
   }
 }
 /*Optimisatioun fir ComputerPlus*/
@@ -267,17 +274,27 @@ button {
     display: inherit;
   }
   .main-wrapper {
-    margin: 5px 80px;
     margin-left: 50px;
+    width: 80%;
+    margin: 0 auto !important;
+  }
+  .mjx-container {
+    max-width: 800px !important;
+    margin: 0 auto !important;
   }
 }
 /*Optimisatioun fir Computer*/
 @media only screen and (min-width: 1445px) {
   .main-wrapper {
-    margin: 5px 80px;
     margin-left: 50px;
+    width: 80%;
+    margin: 0 auto !important;
   }
   .computer {
     display: inherit;
+  }
+  .mjx-container {
+    max-width: 800px !important;
+    margin: 0 auto !important;
   }
 }
