--- a/css/geometry-calculator.css
+++ b/css/geometry-calculator.css
@@ -3,14 +3,16 @@ body {
   margin: 0;
   padding: 0;
   font-size: 1rem; /* Base font size */
+  background-color: var(--background-color);
 }
 
-.container {
+.container-geo {
   max-width: 50rem; /* 800px converted to rem */
   margin: 1.25rem auto; /* 20px converted to rem */
   padding: 1.25rem; /* 20px converted to rem */
   box-shadow: 0 0 0.625rem var(--black); /* 10px converted to rem */
   border-radius: 0.313rem; /* 5px converted to rem */
+  background-color: var(--white);
 }
 
 .tabs {
